# mail-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  puff.yml
src/: main.rs  transport.rs
src/controller/: mail.rs
src/service/: mail.rs
