[package]
name = "mail-service"
version = "0.1.2"
edition = "2021"

[dependencies]
adjust = "0.1.26"
anyhow = "1.0.95"
axum = "0.8.1"
lettre = "0.11.11"
log = "0.4.22"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]
